--- a/src/index.css
+++ b/src/index.css
@@ -37,14 +37,9 @@ main {
 
 .form {
   display: grid;
-  grid-template: 100% 100% / 1fr 1fr;
+  grid-template: 40px 40px / 1fr 1fr;
   gap: 17px;
-  margin-bottom: 7rem;
-}
-
-.form--label {
-  margin-bottom: 5px;
-  font-weight: light;
+  margin-bottom: 17px;
 }
 
 .form--input {
@@ -52,8 +47,6 @@ main {
   border-radius: 5px;
   border: 1px solid #d5d4d8;
   text-indent: 5px;
-  height: 35px;
-  width: 100%;
 }
 
 .form--button {
@@ -68,7 +61,6 @@ main {
 
 .meme {
   position: relative;
-  /* margin-bottom: 10rem; */
 }
 
 .meme--image {
