--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ main {
 
 .meme {
   position: relative;
+  max-width: fit-content;
 }
 
 .meme--image {
@@ -71,7 +72,7 @@ main {
 .meme--text {
   position: absolute;
   width: 80%;
-  text-align: inherit;
+  text-align: center;
   left: 50%;
   transform: translateX(-50%);
   margin: 15px 0;
